force-app/main/default/objects/Billing_Rate__c/Billing_Rate__c.object-meta.xml
<CustomObject>
    <label>Billing Rate</label>
    <nameField>
        <label>Billing Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>