force-app/main/default/objects/Billing_Rate__c/fields/Allowable__c.field-meta.xml
<CustomField>
    <fullName>Allowable__c</fullName>
    <label>Allowable</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>