force-app/main/default/objects/Billing_Rate__c/fields/Billing_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Billing_Multiple__c</fullName>
    <label>Billing Multiple</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>