force-app/main/default/objects/Billing_Rate__c/fields/CPT_Code__c.field-meta.xml
<CustomField>
    <fullName>CPT_Code__c</fullName>
    <label>CPT Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>