force-app/main/default/objects/Billing_Rate__c/fields/Gross_Charge__c.field-meta.xml
<CustomField>
    <fullName>Gross_Charge__c</fullName>
    <formula>Allowable__c *  IF(ISBLANK(Billing_Multiple__c), 0, Billing_Multiple__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>