force-app/main/default/objects/Billing_Rate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>RP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>BHI</fullName>
            </value>
            <value>
                <fullName>NH/Consults</fullName>
            </value>
            <value>
                <fullName>CHI</fullName>
            </value>
            <value>
                <fullName>TCM/PCM</fullName>
            </value>
            <value>
                <fullName>Psych</fullName>
            </value>
            <value>
                <fullName>CoCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>